<resources>
    <string name="app_name">InventaTA</string>
    <string name="nav_header_title">Mode User</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_laporan">Laporan</string>
    <!-- Strings used for fragments for navigation -->

    <string-array name="filterOption">
        <item>Terbaru</item>
        <item>30 Hari</item>
        <item>60 Hari</item>
        <item>1 Tahun Lebih</item>
    </string-array>

    <string-array name="daftar_nama_warna">
        <item>kosong</item>
        <item>hitam</item>
        <item>putih</item>
        <item>kuning</item>
        <item>merah</item>
        <item>hijau</item>
        <item>biru</item>
        <item>ungu</item>
        <item>coklat</item>
        <item>abu-abu</item>
        <item>krem</item>
        <item>oranye</item>
        <item>perak</item>
        <item>pink</item> <!-- tambahan -->
    </string-array>

    <string-array name="daftar_warna">
        <item>#00000000</item> <!-- kosong -->
        <item>#6D6D6D</item> <!-- hitam -->
        <item>#FFFAFA</item> <!-- putih -->
        <item>#FBFB46</item> <!-- kuning -->
        <item>#FF8183</item> <!-- merah -->
        <item>#A9FFAC</item> <!-- hijau -->
        <item>#5C8FFC</item> <!-- biru -->
        <item>#AB64A2</item> <!-- ungu -->
        <item>#E8BB88</item> <!-- coklat -->
        <item>#A2A1A1</item> <!-- abu-abu -->
        <item>#F3D3AC</item> <!-- krem -->
        <item>#FFA500</item> <!-- oranye -->
        <item>#C0C0C0</item> <!-- perak -->
        <item>#FFC0CB</item> <!-- pink -->
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="merek_barang">Merek Barang</string>
    <string name="masukkan_merek_barang">input merek barang</string>
    <string name="kode_barang">Kode Barang</string>
    <string name="masukkan_kode_barang">input kode barang</string>
    <string name="harga_barang">Harga Barang</string>
    <string name="masukkan_harga_barang">input harga barang</string>
    <string name="camera">camera</string>
    <string name="gallery">gallery</string>
    <string name="stok_barang">Stok Barang</string>
    <string name="stok">stok</string>
    <string name="warna">Warna</string>
    <string name="waktu">Waktu</string>
    <string name="nama_toko">Nama Toko</string>
    <string name="ukuran">Ukuran</string>
    <string name="masukkan_ukuran">masukkan ukuran</string>
    <string name="masukkan_nama_toko">input nama toko</string>
    <string name="save">Save</string>

    <string-array name="karakteristik_barang">
        <!-- Usia -->
        <item>Bayi</item>
        <item>Anak-anak</item>
        <item>Dewasa</item>
        <item>Orang Tua</item>

        <!-- Gender -->
        <item>Laki-laki</item>
        <item>Perempuan</item>
        <item>Unisex</item>

        <!-- Jenis Alas Kaki -->
        <item>Sandal Jepit</item>
        <item>Sandal Tali</item>
        <item>Sandal Selop</item>
        <item>Sandal Pesta</item>
        <item>Sandal Kodog</item>
        <item>Sandal Papan</item>
        <item>Sandal Sosok</item>
        <item>Sepatu Sandal</item>
        <item>Sepatu Teplet</item>
        <item>Sepatu Slip On</item>
        <item>Sepatu Sneakers</item>
        <item>Sepatu Boots</item>
        <item>Sepatu Formal</item>
        <item>Sepatu Safety</item>
        <item>Sepatu Pantofel</item>
        <item>Sepatu Lari</item>
        <item>Sepatu Hiking</item>
        <item>Sepatu Futsal</item>
        <item>Sepatu Sekolah</item>
        <item>Sepatu Wedges</item>
        <item>Sepatu Hak Tinggi</item>
        <item>Sepatu Flat</item>
        <item>Sepatu Kulit</item>
        <item>Slip On Muslimah</item>

        <!-- Bahan -->
        <item>Kulit Asli</item>
        <item>Kulit Sintetis</item>
        <item>Plastik</item>
        <item>Karet</item>
        <item>Spon</item>
        <item>Kanvas</item>
        <item>Jeans</item>
        <item>Rajut</item>
        <item>Kain</item>
        <item>Mesh</item>
        <item>Suede</item>
        <item>Beludru</item>

        <!-- Kegunaan / Karakter Tambahan -->
        <item>Anti Air</item>
        <item>Anti Slip</item>
        <item>Ringan</item>
        <item>Nyaman Dipakai</item>
        <item>Outdoor</item>
        <item>Indoor</item>
        <item>Kasual</item>
        <item>Formal</item>
        <item>Elegan</item>
        <item>Sporty</item>
        <item>Trendy</item>
    </string-array>

    <string name="belum_diisi">belum disi</string>

    <!--bagian button sheet-->
    <string name="bayi">Bayi</string>
    <string name="_19">19</string>
    <string name="_21">21</string>
    <string name="_22">22</string>
    <string name="_23">23</string>
    <string name="_25">25</string>
    <string name="_26">26</string>
    <string name="_27">27</string>
    <string name="_28">28</string>
    <string name="_29">29</string>
    <string name="_30">30</string>
    <string name="_31">31</string>
    <string name="_32">32</string>
    <string name="_34">34</string>
    <string name="_35">35</string>
    <string name="dewasa">Dewasa</string>
    <string name="_36">36</string>
    <string name="_37">37</string>
    <string name="_38">38</string>
    <string name="_39">39</string>
    <string name="_40">40</string>
    <string name="_41">41</string>
    <string name="_42">42</string>
    <string name="_43">43</string>
    <string name="_44">44</string>
    <string name="standar_us">Standar US</string>
    <string name="_6">6</string>
    <string name="_6_5">6.5</string>
    <string name="_7">7</string>
    <string name="_7_5">7.5</string>
    <string name="_8">8</string>
    <string name="_8_5">8.5</string>
    <string name="_9">9</string>
    <string name="_9_5">9.5</string>
    <string name="_10">10</string>
    <string name="_10_5">10.5</string>
    <string name="_11_5">11.5</string>
    <string name="_11">11</string>
    <string name="simpan">Simpan</string>
    <string name="_33">33</string>
    <string name="_24">24</string>
    <string name="anak_anak">Anak-anak</string>
    <string name="_20">20</string>
    <string name="_00">00</string>
    <string name="_500000">500000</string>
    <string name="barang_masuk">Barang Masuk</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>


    <!-- TODO: Remove or change this placeholder text -->
</resources>