<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/menu_home"
            />

        <item
            android:id="@+id/nav_barang_masuk"
            android:icon="@drawable/baseline_move_to_inbox_24"
            android:title="@string/barang_masuk"
            />
        <item
            android:id="@+id/nav_tabel_barang"
            android:icon="@drawable/baseline_add_chart_24"
            android:title="@string/menu_laporan" />
        <item
            android:id="@+id/labels_item"
            android:title="tabel">
            <menu>
                <item
                    android:id="@+id/nav_tabel"
                    android:icon="@drawable/baseline_home_24"
                    android:title="@string/menu_home"
                    />

                <item
                    android:id="@+id/nav_laporan_bulanan"
                    android:icon="@drawable/baseline_move_to_inbox_24"
                    android:title="@string/barang_masuk"
                    />
                <item
                    android:id="@+id/nav_laporan_harian"
                    android:icon="@drawable/baseline_add_chart_24"
                    android:title="@string/menu_laporan" />
            </menu>
        </item>


    </group>



</menu>