<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/itembarr"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    >
    <TextView
        android:id="@+id/item_data_tanggal"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@drawable/header_shape"
        android:text="Tanggal"
        android:textColor="@android:color/black"
        android:textSize="14sp"/>
    <TextView
        android:id="@+id/namaProdukTextView"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:background="@drawable/header_shape"
        android:gravity="center"
        android:text="@string/nama_barang"
        android:textColor="@android:color/black"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/kodeProdukTextView"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:background="@drawable/header_shape"
        android:gravity="center"
        android:text="@string/kode_barang"
        android:textColor="@android:color/black"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/stokTextView"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:background="@drawable/header_shape"
        android:gravity="center"
        android:text="@string/ukuran"
        android:textColor="@android:color/black"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/hargaTextView"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:background="@drawable/header_shape"
        android:gravity="center"
        android:text="@string/harga_barang"
        android:textColor="@android:color/black"
        android:textSize="14sp" />

</LinearLayout>
