<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.data.TambahStokFragment"
    android:layout_margin="20dp">
        <ImageView
            android:id="@+id/imgViewBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_arrow_back_ios_new_24"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/tvkodebarang"/>
        <ImageView
            android:id="@+id/img_tambahstok"
            android:layout_width="200dp"
            android:layout_height="0dp"
            android:src="@drawable/baseline_image_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvkodebarang"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/tvHargaBarang"/>
        <TextView
            android:id="@+id/tvkodebarang"
            style="@style/CustomTextViewStyle"
            android:text="@string/kode_barang"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imgViewBack"
            app:layout_constraintBottom_toTopOf="@id/img_tambahstok"/>
        <TextView
            android:id="@+id/tvHargaBarang"
            style="@style/CustomTextViewStyle"
            android:text="@string/harga_barang"
            app:layout_constraintBottom_toTopOf="@id/editTextHargaBarangEdit"
            app:layout_constraintEnd_toEndOf="@id/tvkodebarang"
            app:layout_constraintStart_toStartOf="@id/tvkodebarang"
            app:layout_constraintTop_toBottomOf="@id/img_tambahstok" />
        <com.tugasmobile.inventory.ui.simpleItem.CustomEditText
            android:id="@+id/editTextHargaBarangEdit"
            style="@style/CustomEditTextStyle"
            android:hint="@string/masukkan_harga_barang"
            android:inputType="number"
            app:layout_constraintBottom_toTopOf="@id/button_add_stok"
            app:layout_constraintEnd_toEndOf="@id/tvHargaBarang"
            app:layout_constraintStart_toStartOf="@id/tvHargaBarang"
            app:layout_constraintTop_toBottomOf="@id/tvHargaBarang" />
        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/button_add_stok"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:textSize="12sp"
            app:icon="@drawable/baseline_add_24"
            app:layout_constraintBottom_toTopOf="@id/tvukuranwarna"
            app:layout_constraintEnd_toStartOf="@id/edit_stok_barang"
            app:layout_constraintStart_toStartOf="@id/tvkodebarang"
            app:layout_constraintTop_toBottomOf="@id/editTextHargaBarangEdit" />
        <EditText
            android:id="@+id/edit_stok_barang"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="@integer/material_motion_duration_long_1"
            android:background="@drawable/edit_text_bacground"
            android:fontFamily="@font/poppins_semibold"
            android:hint="@string/_00"
            android:inputType="number"
            android:enabled="false"
            android:textAlignment="center"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="@id/button_add_stok"
            app:layout_constraintEnd_toEndOf="@id/button_remove_stok"
            app:layout_constraintStart_toEndOf="@id/button_add_stok"
            app:layout_constraintTop_toTopOf="@id/button_add_stok" />
        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/button_remove_stok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            app:icon="@drawable/baseline_remove_24"
            app:layout_constraintBottom_toBottomOf="@id/edit_stok_barang"
            app:layout_constraintEnd_toEndOf="@id/editTextHargaBarangEdit"
            app:layout_constraintStart_toEndOf="@id/edit_stok_barang"
            app:layout_constraintTop_toTopOf="@id/edit_stok_barang" />
        <TextView
            android:id="@+id/tvukuranwarna"
            style="@style/CustomTextViewStyle"
            android:text="ukuran dan warna"
            app:layout_constraintBottom_toTopOf="@id/edt_Ukuran"
            app:layout_constraintEnd_toEndOf="@id/button_remove_stok"
            app:layout_constraintStart_toStartOf="@id/button_add_stok"
            app:layout_constraintTop_toBottomOf="@id/button_add_stok" />
        <EditText
            android:id="@+id/edt_Ukuran"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_small"
            android:layout_marginTop="6dp"
            android:background="@drawable/edit_text_bacground"
            android:fontFamily="@font/poppins_semibold"
            android:gravity="center"
            android:hint="@string/_00"
            android:inputType="numberDecimal"
            android:maxLength="3"
            android:textSize="@dimen/text_size_large"
            app:layout_constraintBottom_toTopOf="@id/edit_text_ukuranwarna"
            app:layout_constraintEnd_toStartOf="@id/spinnerWarna"
            app:layout_constraintStart_toStartOf="@id/tvukuranwarna"
            app:layout_constraintTop_toBottomOf="@id/tvukuranwarna" />
        <Spinner
            android:id="@+id/spinnerWarna"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/edit_text_bacground"
            android:fontFamily="@font/poppins_semibold"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@id/edt_Ukuran"
            app:layout_constraintEnd_toStartOf="@id/iconClose"
            app:layout_constraintStart_toEndOf="@id/edt_Ukuran"
            app:layout_constraintTop_toTopOf="@id/edt_Ukuran" />
        <ImageView
            android:id="@+id/iconClose"
            android:layout_width="35dp"
            android:layout_height="0dp"
            android:layout_gravity="start"
            android:layout_marginEnd="8dp"
            android:src="@drawable/baseline_close_24"
            app:layout_constraintBottom_toBottomOf="@id/spinnerWarna"
            app:layout_constraintEnd_toStartOf="@id/iconCheck"
            app:layout_constraintStart_toEndOf="@id/spinnerWarna"
            app:layout_constraintTop_toTopOf="@id/spinnerWarna" />
        <ImageView
            android:id="@+id/iconCheck"
            android:layout_width="35dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:src="@drawable/baseline_check_24"
            app:layout_constraintBottom_toBottomOf="@id/iconClose"
            app:layout_constraintEnd_toEndOf="@id/tvukuranwarna"
            app:layout_constraintStart_toEndOf="@id/iconClose"
            app:layout_constraintTop_toTopOf="@id/iconClose" />
        <com.tugasmobile.inventory.ui.simpleItem.CustomEditText
            android:id="@+id/edit_text_ukuranwarna"
            style="@style/CustomEditTextStyle"
            android:hint="input ukuran warna"
            android:enabled="false"
            app:layout_constraintBottom_toTopOf="@id/tvnamaToko"
            app:layout_constraintStart_toStartOf="@id/edt_Ukuran"
            app:layout_constraintTop_toBottomOf="@id/edt_Ukuran"
            app:layout_constraintEnd_toStartOf="@id/remove_ukuranwarna"/>
        <ImageView
            android:id="@+id/remove_ukuranwarna"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:src="@drawable/baseline_remove_24"
            android:background="@drawable/edit_text_bacground"
            app:layout_constraintStart_toEndOf="@id/edit_text_ukuranwarna"
            app:layout_constraintTop_toTopOf="@id/edit_text_ukuranwarna"
            app:layout_constraintBottom_toBottomOf="@id/edit_text_ukuranwarna"
            app:layout_constraintEnd_toEndOf="@id/iconCheck"
            />
        <TextView
            android:id="@+id/tvnamaToko"
            style="@style/CustomTextViewStyle"
            android:text="@string/nama_toko"
            app:layout_constraintBottom_toTopOf="@id/edt_nama_tokoEdit"
            app:layout_constraintEnd_toEndOf="@id/remove_ukuranwarna"
            app:layout_constraintStart_toStartOf="@id/edit_text_ukuranwarna"
            app:layout_constraintTop_toBottomOf="@id/edit_text_ukuranwarna" />

        <com.tugasmobile.inventory.ui.simpleItem.CustomEditText
            android:id="@+id/edt_nama_tokoEdit"
            style="@style/CustomEditTextStyle"
            android:hint="@string/masukkan_nama_toko"
            app:layout_constraintBottom_toTopOf="@id/btnsave"
            app:layout_constraintEnd_toEndOf="@id/tvnamaToko"
            app:layout_constraintStart_toStartOf="@id/tvnamaToko"
            app:layout_constraintTop_toBottomOf="@id/tvnamaToko" />

        <Button
            android:id="@+id/btnsave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>



</androidx.constraintlayout.widget.ConstraintLayout>